--- a/src/components/Auth/SignUp.css
+++ b/src/components/Auth/SignUp.css
@@ -34,6 +34,8 @@
   align-items: center;
   width: 400px; /* نفس العرض بتاع الـ input */
   margin-top: 5px; /* نفس المسافة العلوية */
+  
+  
 }
 
 /* تنسيق الأيقونة */
@@ -55,7 +57,6 @@
   border-radius: 5px;
   font-size: 14px;
   font-weight: 500;
-  background-color: #ffffff;
   font-family: 'Inter', sans-serif;
   margin-top: 5px;
   cursor: pointer;
@@ -64,6 +65,7 @@
   overflow-wrap: break-word;
   display: block;
   transition: border-color 0.3s ease-in-out;
+  
 }
 
 
@@ -88,5 +90,5 @@
 
 .date-picker:focus {
   outline: none;
-  border-color: #00c4b4;
+  border-color: #0c857b;
 }
