--- a/src/pages/Home/FlightSearchForm.module.css
+++ b/src/pages/Home/FlightSearchForm.module.css
@@ -1,6 +1,5 @@
 
 /* src/components/FlightSearchForm.module.css */
-
 .flyFormContainer {
   position: absolute;
   left: 50%;
@@ -9,6 +8,7 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  z-index: 2;
 }
 
 .flightSearchForm {
@@ -82,6 +82,9 @@
   background-position: right 12px center;
   background-size: 20px;
   cursor: pointer;
+}
+.cityInput {
+  composes: baseInput;
 }
 
 .selectInput:focus,
