--- a/src/pages/SelectedFlights/styles/main.module.css
+++ b/src/pages/SelectedFlights/styles/main.module.css
@@ -1,217 +1,7 @@
-/*----------main-header----------*/
+
 * {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
-.main-header-container {
-  --border-radius-select: 18px;
-  --height-select: 36px;
-  font-size: 0.875rem;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
-  
-}
-.main-header-container select {
-  display: inline-block;
-  appearance: none; /* Removes default styles */
-  -webkit-appearance: none; /* Safari fix */
-  -moz-appearance: none; /* Firefox fix */
-  font-size: inherit;
-  color: var(--DarkyellowText-color);
-  background: var(--bg-color);
-}
-/*-------------------form------------------------*/
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-/*-------------------first-row-------------------*/
-.first-row {
-  display: flex;
-  gap: 16px;
-}
-.way select {
-  color: var(--DarkyellowText-color);
-  background: var(--bg-color);
-  width: 127px;
-  height: var(--height-select);
-  padding: 8px;
-  border-radius: var(--border-radius-select);
-  
-}
-
-.way,
-.group,
-.seat {
-  position: relative;
-}
-.way::after,
-.seat::before {
-  content: "";
-  background: url(../../../assets/arrow-dropdown.png) no-repeat;
-  width: 10px;
-  height: 5px;
-  position: absolute;
-}
-.way::after {
-  right: 20px;
-  top: 15px;
-}
-.group select {
-  width: 58px;
-  height: var(--height-select);
-  border-radius: var(--border-radius-select);
-  padding-left: 35px;
-}
-.group::after {
-  content: "";
-  background: url(../../../assets/group-number.png) no-repeat;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  left: 12px;
-  top: 7px;
-}
-.group::after,
-.way::after,
-.seat::after,
-.seat::before {
-  pointer-events: none; /*remove clicking on the icons*/
-}
-.seat select {
-  width: 132px;
-  height: var(--height-select);
-  border-radius: var(--border-radius-select);
-  padding: 5px;
-  padding-left: 35px;
-}
-.seat::after {
-  content: "";
-  background: url(../../../assets/seat.png) no-repeat;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  left: 10px;
-  top: 10px;
-}
-.seat::before {
-  right: 15px;
-  top: 15px;
-}
-/*-------------------second-row-------------------*/
-.second-row {
-  display: flex;
-  gap: 20px;
-  --second-row-width:229px;
-  --text-padding: 5px;
-  --border-width:1px;
-}
-.from,.to{
-    position: relative;
-}
-.from select, .to select {
-  background-color: var(--bg-color);
-  width: var(--second-row-width);
-  height: var(--height-select);
-  border-radius: var(--border-radius-select);
-  border-width: var(--border-width);
-  padding: var(--text-padding);
-  padding-left: 34px;
-  color: var(--blackText-color);
-}
-
-.from::after, .to::after {
-    content: "";
-    background: url(../../../assets/location-icon.png) no-repeat;
-    width: 16px;
-    height: 16px;
-    position: absolute;
-    top: 10px;
-    left: 12px;
-}
-.location {
-    display: flex;
-    gap: 10px;
-}
-.between {
-    background: url(../../../assets/location-between.png) no-repeat;
-    width: 20px;
-    height: 20px;
-    margin-top: 10px;
-}
-.date-picker:not(:focus){
-  opacity: 0.7;
-}
-
-.calender .date-picker {
-  height: var(--height-select);
-  border-radius: var(--border-radius-select);
-  width: var(--second-row-width);
-  padding: var(--text-padding);
-  padding-left: 25px;
-  border-width: var(--border-width);
-  color: var(--blackText-color);
-  background: var(--bg-color);
-}
-:global(.react-datepicker__calendar-icon) {
-  top: 3px;
-}
-.form-submit button {
-  background-color: var(--Btnbg-color);
-  width: 36px;
-  height: 36px;
-  border-radius: 18px;
-  border: 0px;
-  
-}
-.form-submit button:hover {
-  cursor: pointer;
-}
-/****************************Dates-and-prices************************/
-.calender-price-container {
-  background: var(--Btnbg-color);
-  color: rgb(15, 3, 3);
-  display: grid;
-  grid-template-columns: repeat(5,1fr);
-  min-height: 67px;
-  border-radius: 6px;
-  gap: 20px;
-  margin-top: 24px;
-}
-.calender-element,.calenderIcon {
-  padding-top: 7px;
-  text-align: center;
-}
-.calender-element{
-  margin-top: 8px;
-  transition: background-color 0.2s;
-  margin-left: 8px;
-}
-.calenderIcon{
-  border-left: 1px solid white;
-  padding-left: 30px;
-}
-.calenderIcon button {
-  background-color: inherit;
-  border: none;
-  margin-top: 13px;
- 
-}
-.calenderIcon button img {
-  width: 24px;
-  height: 24px;
-}
-.calender-element:hover , .calenderIcon button:hover {
-  cursor: pointer;
-}
-.calender-element:hover:not(.selected){
-background-color: #1a9ff1;
-}
-
-.selected {
-  background-color: white;
-  color: rgb(13, 14, 13);
-}
-
 /**************Main-body******************/
 .mainBody {
   margin-top: 24px;
@@ -223,9 +13,6 @@ background-color: #1a9ff1;
   padding-bottom: 50px;
   color:var(--blackText-color);
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
-  
-  
-  
 }
 .flight {
   display: grid;
@@ -267,7 +54,7 @@ background-color: #1a9ff1;
   left: 0;
   top: 7px;
 }
-.flightTime div:nth-child(1),.flightPrice {
+.arrivalDeparture,.flightPrice {
   font-weight: bold;
 }
 .flightPrice{
@@ -328,4 +115,16 @@ color: var(--LightText-color);
 }
 .pagination button:hover:not(.active){
   background-color: #DEE1E6;
+}
+.airLine {
+  max-width: 120px;
+}
+.moreThanADay {
+  position: absolute;
+  right: 5px;
+  top: -18px;
+  font-size: 0.875em;
+}
+.flightTime{
+  position: relative;
 }
