--- a/src/pages/SelectedFlights/styles/container.module.css
+++ b/src/pages/SelectedFlights/styles/container.module.css
@@ -7,6 +7,7 @@
     margin-top: 150px;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 100px;
     gap: 25px;
     grid-template-columns: 0.3fr 1fr;
     grid-template-rows: 100px 1fr;
