--- a/src/pages/SelectedFlights/styles/main.module.css
+++ b/src/pages/SelectedFlights/styles/main.module.css
@@ -12,7 +12,7 @@
   position: relative;
   padding-bottom: 50px;
   color:var(--blackText-color);
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important;
 }
 .flight {
   display: grid;
@@ -101,6 +101,7 @@ color: var(--LightText-color);
   position: absolute;
   right: 0;
   bottom: 0;
+  top:100%;
 }
 .pagination button {
   width: 36px;
