--- a/src/pages/SelectedFlights/styles/mainHeader.module.css
+++ b/src/pages/SelectedFlights/styles/mainHeader.module.css
@@ -1,212 +1,99 @@
 * {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  }
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
 .main-header-container {
-    --border-radius-select: 18px;
-    --height-select: 36px;
-    font-size: 0.875rem;
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
-  }
-  .main-header-container select {
-    display: inline-block;
-    appearance: none; /* Removes default styles */
-    -webkit-appearance: none; /* Safari fix */
-    -moz-appearance: none; /* Firefox fix */
-    font-size: inherit;
-    color: var(--DarkyellowText-color);
-    background: var(--bg-color);
-  }
-  /*-------------------form------------------------*/
-  .form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  /*-------------------first-row-------------------*/
-  .first-row {
-    display: flex;
-    gap: 16px;
-  }
-  .way select {
-    color: var(--DarkyellowText-color);
-    background: var(--bg-color);
-    width: 127px;
-    height: var(--height-select);
-    padding: 8px;
-    border-radius: var(--border-radius-select);
-    
-  }
-  
-  .way,
-  .group,
-  .seat {
-    position: relative;
-  }
-  .way::after,
-  .seat::before {
-    content: "";
-    background: url(../../../assets/arrow-dropdown.png) no-repeat;
-    width: 10px;
-    height: 5px;
-    position: absolute;
-  }
-  .way::after {
-    right: 20px;
-    top: 15px;
-  }
-  .group select {
-    width: 58px;
-    height: var(--height-select);
-    border-radius: var(--border-radius-select);
-    padding-left: 35px;
-  }
-  .group::after {
-    content: "";
-    background: url(../../../assets/group-number.png) no-repeat;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    left: 12px;
-    top: 7px;
-  }
-  .group::after,
-  .way::after,
-  .seat::after,
-  .seat::before {
-    pointer-events: none; /*remove clicking on the icons*/
-  }
-  .seat select {
-    width: 132px;
-    height: var(--height-select);
-    border-radius: var(--border-radius-select);
-    padding: 5px;
-    padding-left: 35px;
-  }
-  .seat::after {
-    content: "";
-    background: url(../../../assets/seat.png) no-repeat;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    left: 10px;
-    top: 10px;
-  }
-  .seat::before {
-    right: 15px;
-    top: 15px;
-  }
-  /*-------------------second-row-------------------*/
-  .second-row {
-    display: flex;
-    gap: 20px;
-    --second-row-width:229px;
-    --text-padding: 5px;
-    --border-width:1px;
-  }
-  .from,.to{
-      position: relative;
-  }
-  .from select, .to select {
-    background-color: var(--bg-color);
-    width: var(--second-row-width);
-    height: var(--height-select);
-    border-radius: var(--border-radius-select);
-    border-width: var(--border-width);
-    padding: var(--text-padding);
-    padding-left: 34px;
-    color: var(--blackText-color);
-  }
-  
-  .from::after, .to::after {
-      content: "";
-      background: url(../../../assets/location-icon.png) no-repeat;
-      width: 16px;
-      height: 16px;
-      position: absolute;
-      top: 10px;
-      left: 12px;
-  }
-  .location {
-      display: flex;
-      gap: 10px;
-  }
-  .between {
-      background: url(../../../assets/location-between.png) no-repeat;
-      width: 20px;
-      height: 20px;
-      margin-top: 10px;
-  }
-  .date-picker:not(:focus){
-    opacity: 0.7;
-  }
-  
-  .calender .date-picker {
-    height: var(--height-select);
-    border-radius: var(--border-radius-select);
-    width: var(--second-row-width);
-    padding: var(--text-padding);
-    padding-left: 25px;
-    border-width: var(--border-width);
-    color: var(--blackText-color);
-    background: var(--bg-color);
-  }
-  :global(.react-datepicker__calendar-icon) {
-    top: 3px;
-  }
-  .form-submit button {
-    background-color: var(--Btnbg-color);
-    width: 36px;
-    height: 36px;
-    border-radius: 18px;
-    border: 0px;
-    
-  }
-  .form-submit button:hover {
-    cursor: pointer;
-  }
-  /****************************Dates-and-prices************************/
-  .calender-price-container {
-    background: var(--Btnbg-color);
-    color: rgb(15, 3, 3);
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-    min-height: 67px;
-    border-radius: 6px;
-    gap: 20px;
-    margin-top: 24px;
-  }
-  .calender-element,.calenderIcon {
-    padding-top: 7px;
-    text-align: center;
-  }
-  .calender-element{
-    margin-top: 8px;
-    transition: background-color 0.2s;
-    margin-left: 8px;
-  }
-  .calenderIcon{
-    border-left: 1px solid white;
-    padding-left: 30px;
-  }
-  .calenderIcon button {
-    background-color: inherit;
-    border: none;
-    margin-top: 13px;
-   
-  }
-  .calenderIcon button img {
-    width: 24px;
-    height: 24px;
-  }
-  .calender-element:hover , .calenderIcon button:hover {
-    cursor: pointer;
-  }
-  .calender-element:hover:not(.selected){
-  background-color: #1a9ff1;
-  }
-  
-  .selected {
-    background-color: white;
-    color: rgb(13, 14, 13);
-  }
-  
+  --border-radius-select: 18px;
+  --height-select: 36px;
+  font-size: 0.875rem;
+  font-family:
+    Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important;
+  --second-row-width: 229px;
+  --text-padding: 5px;
+  --border-width: 1px;
+  grid-area: 1/1/2/3;
+}
+.main-header-container select {
+  display: inline-block;
+  appearance: none; /* Removes default styles */
+  -webkit-appearance: none; /* Safari fix */
+  -moz-appearance: none; /* Firefox fix */
+  font-size: inherit;
+  color: var(--DarkyellowText-color);
+  background: var(--bg-color);
+}
+/*-------------------form------------------------*/
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.baseInput {
+  width: 260px;
+  height: 75px;
+  padding: 8px 35px;
+  padding-right: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  white-space: normal !important;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  display: block;
+  color: var(--Darktext-color);
+  font-size: 14px;
+  font-weight: 500;
+  background-color: var(--bg-color);
+  font-family: "Inter", sans-serif;
+  margin-top: 5px;
+}
+.baseInput:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+.origin,
+.destination,
+.passengerInput
+ {
+  composes: baseInput;
+}
+
+.form-submit button {
+  background-color: var(--Btnbg-color);
+  width: 36px;
+  height: 36px;
+  border-radius: 18px;
+  border: 0px;
+}
+.form-submit button:hover {
+  cursor: pointer;
+}
+.passengerClassContainer {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 1rem;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  min-width: 250px;
+}
+.passengerContainer,.from,.to,.calender{
+  position: relative;
+}
+
+.iconForm {
+  position: absolute;
+  left: 10px;
+  font-size: 20px;
+  color: var(--Btnbg-color);
+  top: 32px;
+}
+.calender {
+  max-width: 400px;
+  height: 75px;
+  margin-bottom: 5px;
+}
