--- a/src/pages/FlightDetails/FlightDetails.css
+++ b/src/pages/FlightDetails/FlightDetails.css
@@ -7,6 +7,7 @@
   background-color:var(--bg-color);
   min-height: 100vh;
   padding: 20px;
+  transition: background-color .5s ease, color .5s ease;
 }
 
 .booking-container {
