--- a/src/pages/FlightDetails/DetailsOfTheFlight/DetailsOfTheFlight.module.css
+++ b/src/pages/FlightDetails/DetailsOfTheFlight/DetailsOfTheFlight.module.css
@@ -1,6 +1,6 @@
 .flightDetailsContainer {
   max-width: 600px;
-  margin: 100px auto;
+  margin: 0 auto;
   
   background-color: white;
   border-radius: 10px;
