Showed the selected departure flight in the ui.
    -Made the selected departure flight shown in the ui when choosing return.
    -You can also reselect the departure flight again.
    -Price now adjusted to be taken from departure only when there is only departure and when there is return the total price(departure+return) is taken into account.

--- a/src/pages/SelectedFlights/styles/main.module.css
+++ b/src/pages/SelectedFlights/styles/main.module.css
@@ -72,7 +72,7 @@
 }
 .departureName{
   position: absolute;
-  left: 0;
+  left: -5px;
   top: 3px;
 }
 .departureName, .arrivalName{
@@ -80,7 +80,7 @@
 }
 .arrivalName {
   position: absolute;
-  right: 55px;
+  right: 45px;
   top: 3px;
 }
 .stops .stop {
