--- a/src/pages/SelectedFlights/styles/container.module.css
+++ b/src/pages/SelectedFlights/styles/container.module.css
@@ -76,7 +76,19 @@
     margin-top: 100px;
     font-size: 3rem;
   }
-  .flightText {
+  .flightTextContainer {
     grid-area: 2/1/3/3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .flightTextContainer h2 {
     text-align: center;
+  }
+  .departureFlightSelected {
+    max-width: 950px;
+    margin-top: 10px;
+    border: 1px black dashed;
+    padding: 10px;
   }
