--- a/src/pages/FlightDetails/FinalDetails/FinalDetails.module.css
+++ b/src/pages/FlightDetails/FinalDetails/FinalDetails.module.css
@@ -12,3 +12,20 @@
   width: 350px;
 }
 
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  background-color: var(--bg-color);
+  border-radius: 8px;
+  border: 1px solid var(--menuHover-color);
+  min-height: 200px;
+}
+
+.loadingMessage {
+  color: var(--LightDarktext-color);
+  font-size: 1rem;
+  text-align: center;
+}
+
