--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,3 @@
-
-
-
 .header {
   background-color:var(--bg-color);
   padding-top: 16px;
@@ -9,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
+  position: relative;
   z-index: 20;
   border-bottom: 1px solid rgba(2, 75, 97, 0.226);
   top: 0;
