--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,11 +6,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: relative;
+  position: fixed;
   z-index: 20;
   border-bottom: 1px solid rgba(2, 75, 97, 0.226);
   top: 0;
-  
+  left: 0;
+  right: 0;
 }
 
 .logo {
