--- a/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
+++ b/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
@@ -361,10 +361,11 @@
 }
 
 .container {
-  min-height: 100vh;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-end;
+  align-items: flex-start;
+  min-height: 100vh;
 }
 
 .payment {
