Updating cancel & date change to be based on api data, also removing baggage allowance and added its details to baggage option

--- a/src/components/FareSelection/FareSelection.module.css
+++ b/src/components/FareSelection/FareSelection.module.css
@@ -10,7 +10,20 @@
 .fareSelectionHeader {
   padding: 20px;
 }
-
+.HeaderWrapper{
+  display: flex;
+  justify-content: space-between;
+}
+.detailsBtn {
+  background-color: inherit;
+  border: none;
+  color: #181818;
+  font-size: 16px;
+}
+.detailsBtn:hover {
+  cursor: pointer;
+  transform: scale(1.08);
+}
 .fareSelectionHeader h3 {
   font-size: 18px;
   font-weight: 600;
