--- a/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
+++ b/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
@@ -358,71 +358,60 @@
   --greyLight-2: #c8dbf0;
   --greyDark-1: #92acc4;
   --greyDark-2: #5a768f;
+  --Darktext-color: #333;
+  --LightDarktext-color: #666;
 }
 
 .container {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
-  min-height: 100vh;
+  margin-left: 1px;
+ 
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .payment {
-  width: 74.8rem;
-  height: 48rem;
+  width: 70rem;
+  height: auto;
   border-radius: 0.8rem;
   background: #ffffff;
   display: grid;
-  grid-template-columns: 32rem 24.8rem;
-  padding: 4rem 6rem;
-  grid-gap: 6rem;
+  grid-template-columns: 24rem 1fr;
+  padding: 3rem 4rem;
+  grid-gap: 4rem;
   align-items: center;
-  position: relative;
-}
-.payment__dots {
-  position: absolute;
-  top: 0.5rem;
-  left: 4rem;
-}
-.payment__shadow-dots {
-  position: absolute;
-  top: 0.5rem;
-  left: 4rem;
-  width: 6.5rem;
-  height: 11.5rem;
-  background: linear-gradient(to bottom, #e0ecf700 0%, #ffffff 100%);
-  z-index: 200;
+ 
 }
 
 .card {
   grid-column: 1/2;
-  width: 32rem;
-  height: 20rem;
+  width: 24rem;
+  height: 15rem;
   border-radius: 1rem;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  padding: 0 2rem;
+  padding: 0 1.5rem;
   align-items: center;
   color: #ffffff;
   background: linear-gradient(to bottom, var(--secondary) 0%, var(--primary) 50%);
-  box-shadow: -0.6rem 0.6rem 1.8rem #4f46f83d;
+  box-shadow: -0.4rem 0.4rem 1.5rem #4f46f83d;
   border: 1px solid #ffffff;
-  z-index: 200;
-  position: relative;
+  z-index: 2;
+  position:absolute;
 }
 .card__visa {
   justify-self: flex-end;
   grid-column: 2/3;
   overflow: hidden;
-  width: 5.5rem;
+  width: 5rem;
+  font-weight: bold;
+  font-size: 1.8rem;
 }
 .card__number {
   font-family: "Roboto Mono", monospace;
   grid-column: 1/3;
   grid-row: 2/3;
-  font-size: 1.8rem;
-  letter-spacing: 0.12rem;
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
 }
 .card__name {
   grid-row: 3/4;
@@ -434,7 +423,7 @@
   font-weight: 300;
 }
 .card__name p {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 .card__expiry {
   grid-row: 3/4;
@@ -450,23 +439,23 @@
   font-weight: 300;
 }
 .card__expiry p {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 .form {
   grid-column: 2/3;
   display: grid;
-  grid-template-columns: repeat(2, 11rem);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(5, min-content);
-  grid-column-gap: 2.8rem;
-  grid-row-gap: 1.2rem;
+  grid-column-gap: 2rem;
+  grid-row-gap: 1rem;
   color: var(--greyDark-2);
 }
 .form h2 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   grid-column: 1/3;
   line-height: 1;
-  margin-bottom: 1.4rem;
+  margin-bottom: 1.2rem;
   font-family: "Inter", sans-serif;
 }
 .form__detail {
@@ -497,25 +486,18 @@
   justify-self: flex-end;
   width: 100%;
 }
-.form__cvv input[type=checkbox] {
-  display: none;
-}
-.form__cvv .info {
-  top: -0.4rem;
-  left: 2.4rem;
-  color: var(--greyDark-1);
-}
+
 .form__btn {
   grid-column: 1/3;
   grid-row: 5/6;
-  height: 3.8rem;
+  height: 3.4rem;
   border-radius: 0.6rem;
   border: none;
   background: var(--primary);
   color: #ffffff;
   justify-self: stretch;
   font-family: inherit;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   cursor: pointer;
 }
 .form__btn:focus {
@@ -524,41 +506,13 @@
 .form__btn:hover {
   background: var(--primary-dark);
 }
-.form ion-icon {
-  position: absolute;
-  font-size: 2rem;
-  top: 3.4rem;
-  margin-left: 1rem;
-  color: var(--primary-light);
-  stroke: var(--primary);
-}
+
 .form label {
   pointer-events: none;
-  font-size: 1.4rem;
-  padding: 0 0 1rem 0;
+  font-size: 1.2rem;
+  padding: 0 0 0.8rem 0;
   line-height: 1;
   color: var(--greyDark-1);
-}
-.form input {
-  padding: 1rem 1rem 1rem 4rem;
-  border: none;
-  background: transparent;
-  border-radius: 0.6rem;
-  border: 1px solid var(--greyLight-2);
-  color: var(--greyDark-2);
-  font-family: inherit;
-  font-size: 1.4rem;
-}
-.form input::placeholder {
-  color: var(--greyLight-1);
-  font-size: inherit;
-  letter-spacing: 0.12rem;
-}
-.form input:focus {
-  outline: none;
-}
-.form input:hover {
-  border: 1px solid var(--primary-light);
 }
 
 .alert {
@@ -568,10 +522,65 @@
   margin-top: 0.6rem;
   display: flex;
   align-items: center;
-  opacity: 0;
 }
+
 .alert svg {
-  margin-right: 0.4rem;
+    margin-right: 0.4rem;
+}
+
+.stripeCardElement {
+  padding: 0.8rem 0.8rem 0.8rem 3.5rem;
+  border: 1px solid var(--greyLight-2);
+  border-radius: 0.6rem;
+  background-color: transparent;
+  color: var(--greyDark-2);
+  font-family: inherit;
+  font-size: 1.2rem;
+}
+
+.stripeCardElement:focus-within,
+.form__detail input:focus {
+  outline: none;
+  border-color: var(--primary-light);
+}
+
+.form__detail input {
+  padding: 0.8rem 0.8rem 0.8rem 3.5rem;
+  border: 1px solid var(--greyLight-2);
+  border-radius: 0.6rem;
+  background: transparent;
+  color: var(--greyDark-2);
+  font-family: inherit;
+  font-size: 1.2rem;
+}
+
+.icon {
+  position: absolute;
+  font-size: 1.8rem;
+  top: 2.8rem;
+  left: 1rem;
+  color: var(--primary-light);
+}
+
+.payButton:disabled,
+.form__btn:disabled {
+    background-color: var(--greyDark-1);
+    cursor: not-allowed;
+}
+
+.payment__dots {
+  position: absolute;
+  top: 0.5rem;
+  left: 4rem;
+}
+.payment__shadow-dots {
+  position: absolute;
+  top: 0.5rem;
+  left: 4rem;
+  width: 6.5rem;
+  height: 11.5rem;
+  background: linear-gradient(to bottom, #e0ecf700 0%, #ffffff 100%);
+  z-index: 200;
 }
 
 .dribbble {
