--- a/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
+++ b/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
@@ -463,7 +463,7 @@
   flex-direction: column;
   position: relative;
   justify-content: center;
-  padding-bottom: 0.6rem;
+  padding-bottom: 2rem;
   color: var(--greyDark-1);
 }
 .form__name {
@@ -522,6 +522,9 @@
   margin-top: 0.6rem;
   display: flex;
   align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .alert svg {
@@ -591,4 +594,13 @@
   color: #EA4C89;
 }
 /* === Custom Card Design End === */
+  
+.form__detail input:-webkit-autofill,
+.form__detail input:-webkit-autofill:hover,
+.form__detail input:-webkit-autofill:focus,
+.form__detail input:-webkit-autofill:active {
+  -webkit-text-fill-color: var(--greyDark-2);
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+  box-shadow: 0 0 0 30px white inset !important;
+}
   
