--- a/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
+++ b/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
@@ -406,6 +406,16 @@
   font-weight: bold;
   font-size: 1.8rem;
 }
+.card__logo_container {
+    justify-self: flex-end;
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.card__logo_container svg {
+    width: 50px;
+    height: auto;
+}
 .card__number {
   font-family: "Roboto Mono", monospace;
   grid-column: 1/3;
@@ -554,13 +564,13 @@
   background: transparent;
   color: var(--greyDark-2);
   font-family: inherit;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
 }
 
 .icon {
   position: absolute;
   font-size: 1.8rem;
-  top: 2.8rem;
+  top: 3.5rem;
   left: 1rem;
   color: var(--primary-light);
 }
@@ -602,5 +612,21 @@
   -webkit-text-fill-color: var(--greyDark-2);
   -webkit-box-shadow: 0 0 0 30px white inset !important;
   box-shadow: 0 0 0 30px white inset !important;
+}
+  
+.designModeWarning {
+    grid-column: 1 / -1;
+    color: #b96000;
+    background-color: #fff3e0;
+    border: 1px solid #ffe0b2;
+    border-radius: .6rem;
+    font-size: 1.2rem;
+    padding: .8rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
   
