--- a/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
+++ b/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
@@ -370,16 +370,17 @@
 }
 
 .payment {
-  width: 70rem;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
   height: auto;
   border-radius: 0.8rem;
   background: #ffffff;
-  display: grid;
-  grid-template-columns: 24rem 1fr;
-  padding: 3rem 4rem;
-  grid-gap: 4rem;
+  display: flex;
+  flex-direction: column;
   align-items: center;
- 
+  justify-content: center;
+  padding: 3rem 2rem;
 }
 
 .card {
