--- a/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
+++ b/src/pages/FlightDetails/PaymentSection/paymentsection.module.css
@@ -702,3 +702,17 @@
   }
 }
   
+.paymentOnlyForm {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  height: auto;
+  border-radius: 0.8rem;
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 3rem 2rem;
+}
+  
